@@ -1,3 +1,9 @@
+2017-04-25  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* common-src/Makefile.am (INSTALLPERMS_exec): Add ambind, remove
+	  amservice
+	* server-src/Makefile.am (INSTALLPERMS_exec): Remove amcheck, dumper
+	  and planner
+
 2017-04-20  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* NEWS: S3 device: openstack keystone v3 support
 	* device-src/s3-device.c: PROJECT-NAME and DOMAIN-NAME device
